# hm-python

./: .coverage  LICENSE  README.md  pyproject.toml
src/hm_python/: __init__.py  console.py  wikipedia.py
src/hm_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_console.py  test_wikipedia.py
