[tool.poetry]
name = "hm-python"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/scastillosanchez/hm-python"
repository = "https://github.com/scastillosanchez/hm-python"
keywords = ["hypermodern"]
authors = ["Sebastian Castillo-Sanchez  <scastillosanchez@outlook.com>"]

[tool.poetry.scripts]
hm-python = "hm_python.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.9.0"
coverage = {version = "^5.1", extras = ["toml"]}
pytest-mock = "^3.1.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hm_python"]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


